kubernetes/k3s-prod-a/workloads/gotify/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  namespace: gotify
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: gotify
  template:
    metadata:
      labels:
        app: gotify
    spec:
      containers:
        - name: gotify
          image: docker.io/gotify/server:2.6.1@sha256:04f4c4bb7cdde8c84e5a89d1287bd1f766c02c1cd477dc01c47acae80bff3c77
          startupProbe:
            httpGet:
              path: /health
              port: 80
            failureThreshold: 5
            periodSeconds: 20
          ports:
            - containerPort: 80
          volumeMounts:
            - name: gotify-data
              mountPath: /app/data
      volumes:
        - name: gotify-data
          persistentVolumeClaim:
            claimName: gotify-data
